2013-06-08  Ben Elliston  <bje@gnu.org>

	* configure: Regenerate with autoconf 2.69.
	* aclocal.m4: Regenerate.

2013-03-31  Ben Elliston  <bje@gnu.org>

	* Makefile.am (html-local): Rename target from html.
	* Makefile.in: Regenerate with automake 1.12.6.
	* aclocal.m4: Likewise.
	* configure: Regenerate.

2013-03-28  Gilles Espinasse  <g.esp@free.fr>

	* TODO: Remove todo item about warncnt and errcnt.

2013-03-28  Gilles Espinasse  <g.esp@free.fr>

	* testsuite/lib/libsup.exp (make_defaults_file): Only set $tool once.

2013-03-26  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2013-02-12.
	* config.sub: Likewise.

2013-02-16  Rob Savoye  <rob@build.welcomehome.org>

	* config/adb.exp: Add adb_file so we can remotely delete test
	cases to save on limited disk space. Don't remove the file after
	executing it, leave that for the test driver instead.

2013-02-15  Rob Savoye  <rob@welcomehome.org>

	* config/adb.exp: Remove the test case after executing
	it. Otherwise we can fill up all the diskspace on a small target
	pretty fast.

2013-02-11  Rob Savoye	<rob@welcomehome.org>

	* baseboards/androideabi.exp: Board support for Android using ADB.
	* config/adb.exp: Config support for Android using ADB.
	* Makefile.am (dist): Add new config and board files.
	* aclocal.m4, Makefile.in, configure, example/calc/configure,
	example/mathhelper/configure: Regenerated with newer autotools.

2012-12-05  Ben Elliston  <bje@gnu.org>

	* example/hello: Remove.
	* configure.ac: Likewise.
	* configure: Regenerate.

2012-10-04  Steve Ellcey  <sellcey@mips.com>

	* Makefile.am (baseboard_SCRIPTS): Add new baseboards.
	* Makefile.in: Regenerate.
	* baseboards/mips-sim-mti32.exp: New.
	* baseboards/mips-sim-mti64.exp: New.
	* baseboards/mips-sim-mti64_n32.exp: New.
	* baseboards/mips-sim-mti64_64.exp: New.
	* baseboards/mips-sim-sde32.exp: New.
	* baseboards/mips-sim-sde64.exp: New.

2012-10-04  Ben Elliston  <bje@gnu.org>
